# GoumzAndStuff

./: .gitmodules  README.md  test.py
assets/scripts/: main_game.lua
assets/scripts/buildings/: coal_extractor.lua
assets/shaders/: div_shader.frag.glsl  div_shader.vert.glsl  text_shader.frag.glsl  text_shader.vert.glsl  tile_shader.frag.glsl  tile_shader.vert.glsl
docs/: WtfOpenGL.md
proj.android/: settings.gradle
proj.android/app/: build.gradle
proj.android/app/src/androidTest/java/be/wholesome/goumzandstuff/: ExampleInstrumentedTest.kt
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/java/be/wholesome/goumzandstuff/: MainActivity.kt
proj.android/app/src/main/res/values/: strings.xml  themes.xml
proj.android/app/src/main/res/values-night/: themes.xml
proj.android/app/src/test/java/be/wholesome/goumzandstuff/: ExampleUnitTest.kt
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.game/: CMakeLists.txt
proj.game/src/: Font.cpp  Font.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp  Text.cpp  Text.hpp  Vector2.cpp  Vector2.hpp  World.cpp  World.hpp
proj.game/swig/: game.i  interface.hpp
proj.linux/src/: main.cpp
